--- a/static/Login/login/login.css
+++ b/static/Login/login/login.css
@@ -3,101 +3,78 @@ a{color: black;}
 a:link { color: none; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
 a:hover { color: none; text-decoration: none;}
-.nav{
-    position: relative;
-    width: 100%;
-    height: 50px;
-    z-index: 999;
-    box-shadow: 2px 2px 20px gray;
-    display: flex;
-    background-color: #e9e9e9;
-    font-family: 'Lobster', cursive;
+
+
+
+.logo{
+    margin: 7rem auto 2rem 6.5rem;
+}
+
+.logo a{
+    font-weight: bold;
     font-size: 30px;
+    color: #3ea2ff;
 }
-li{
-    position: relative;
-    height: fit-content;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    list-style: none;
-    padding-left: 0px;
-}
-main{
-    position: relative;
-    z-index: 999;
-    width: 100%;
-    height: calc(100vh - 50px);
-    background-color: #fcfcfe;
+.login-title{
+    line-height: 40px;
+    margin-left: 10px;
 }
 
 .login-section{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     width: 40em;
-    border-left: 2mm ridge #5b9cff;
-    border-right: 2mm ridge #5b9cff;
-    height: 30em;
-    box-shadow: 10px 10px 50px gray;
     border-radius: 20px;
-    background-color: #e9e9e9
+    border: 2px solid #ddd;
+    margin: auto;
 }
 
 .login-section-inside{
-    position: relative;
-    width: 60%;
-    height: 90%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* background-color: yellow; */
+    margin: 35px auto;
 }
 
 .input-section{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 30px;
-    font-family: 'Lobster', cursive;
+    margin-bottom: 20px;
     height: fit-content;
 }
 .input-section h4{
-    font-size: 1.75rem;
-    /* background-color: teal; */
-    height: fit-content;
-    top: 50%;
-    transform: translateY(25%);
-    margin-left: 1em;
+    font-size: 0.75rem;
+    margin-left: 0.5em;
+    margin-bottom: 5px;
 }
 
 .input-section input{
-    width: 70%;
-    height: 2.5em;
-    margin-right: 1em;
+    width: calc(100% - 20px);
+    height: 3.5em;
+    background-color: #e9e9e9;
+    border-radius: 5px;
+    outline-style: none;
+    border:0;
+    padding-left: 20px;
 }
 
-/* .button-section{
-    margin-top: 0 em;
-} */
-
-.button-section input{
+#btn-login,
+#btn-signup{
     cursor: pointer;
-    width: 85%;
+    width: 100%;
     height: 3.5em;
     margin-top: 1em;
-    margin-left: 2.5em;
-    margin-right: 2.5em;
     font-size: 0.95rem;
     font-weight: 900;
-    background-color: #0e6ef9;
+    background-color: #3ea2ff;
     border:none;
     border-radius: 5px;
     color: white;
+}
+
+#btn-getreissuedpassword,
+#btn-changepassword{
+    background-color: #fff;
+    cursor: pointer;
+    border:none;
+    margin-top: 20px;]
+}
+
+#btn-getreissuedpassword{
+    margin-left: 30px;
 }
 
 .button-section input:hover{
